--- a/flutter-build.yml
+++ b/flutter-build.yml
@@ -36,23 +36,6 @@ jobs:
         run: |
           flutter build apk --release --target-platform android-arm,android-arm64
 
-      # Step 6: Upload APK
+      # Step 6: Upload Release APK
       - name: Upload Release APK
-        uses: actions/upload-artifact@v3
-        with:
-          name: app-release.apk
-          path: build/app/outputs/flutter-apk/app-release.apk
-
-      # Step 7: Upload libflutter.so for arm64
-      - name: Upload libflutter.so for arm64
-        uses: actions/upload-artifact@v3
-        with:
-          name: libflutter_so_arm64
-          path: build/app/intermediates/merged_native_libs/release/out/lib/arm64-v8a/libflutter.so
-
-      # Step 8: Upload libflutter.so for armeabi-v7a
-      - name: Upload libflutter.so for armeabi-v7a
-        uses: actions/upload-artifact@v3
-        with:
-          name: libflutter_so_armeabi_v7a
-          path: build/app/intermediates/merged_native_libs/release/out/lib/armeabi-v7a/libflutter.so
+        uses:
