--- a/flutter-build.yml
+++ b/flutter-build.yml
@@ -3,7 +3,7 @@ name: Flutter Build for arm64 and armeabi-v7a
 on:
   push:
     branches:
-      - main  # Change this to your target branch
+      - main  # Trigger on pushes to the main branch
   pull_request:
     branches:
       - main
@@ -18,41 +18,40 @@ jobs:
         uses: actions/checkout@v3
 
       # Step 2: Set up Flutter environment
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.5.4'  # Use your desired Flutter version
+        - name: Set up Flutter
+          uses: subosito/flutter-action@v2
+          with:
+            flutter-version: '3.5.0'  # Specify the Flutter version
 
       # Step 3: Verify Flutter installation
       - name: Print Flutter version
         run: flutter --version
 
-      # Step 4: Get dependencies
+      # Step 4: Get Flutter dependencies
       - name: Get Flutter dependencies
         run: flutter pub get
 
       # Step 5: Build APK for arm64 and armeabi-v7a
       - name: Build APK for arm64 and armeabi-v7a
-        run: |
-          flutter build apk --release --target-platform android-arm,android-arm64
+        run: flutter build apk --release --target-platform android-arm,android-arm64
 
-      # Step 6: Upload Release APK
+      # Step 6: Upload APK Artifact
       - name: Upload Release APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v3  # Corrected to v3
         with:
           name: app-release.apk
           path: build/app/outputs/flutter-apk/app-release.apk
 
       # Step 7: Upload libflutter.so for arm64
       - name: Upload libflutter.so for arm64
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v3  # Corrected to v3
         with:
           name: libflutter_so_arm64
           path: build/app/intermediates/merged_native_libs/release/out/lib/arm64-v8a/libflutter.so
 
       # Step 8: Upload libflutter.so for armeabi-v7a
       - name: Upload libflutter.so for armeabi-v7a
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v3  # Corrected to v3
         with:
           name: libflutter_so_armeabi_v7a
           path: build/app/intermediates/merged_native_libs/release/out/lib/armeabi-v7a/libflutter.so
